SpringSecurity04/src/main/java/com/example/springsecurity04/Error/DuplicateEmailException.java
package com.example.springsecurity04.Error;

public class DuplicateEmailException extends RuntimeException {
    public DuplicateEmailException(String message) {
        super(message);
    }
}